fix: truncate title in list title page, add tooltip, increase font size

--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -80,6 +80,9 @@
     }
 
     .nav-item {
+      padding-left: 3px;
+      padding-right: 3px;
+
       &.active{
         color: $text-color;
         font-weight: 700;
