--- a/assets/sass/_page_specific.scss
+++ b/assets/sass/_page_specific.scss
@@ -38,3 +38,7 @@
     }
   }
 }
+
+.tooltip-inner{ 
+  font-size: 20px;
+}
