--- a/assets/sass/_post_list.scss
+++ b/assets/sass/_post_list.scss
@@ -103,10 +103,10 @@
       }
 
       .title-item-title{
-        font-size: 16px;
+        font-size: 20px;
       }
       .title-item-date{
-        font-size: 12px;
+        font-size: 16px;
       }
     }
   }
